--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,21 @@
+<app-loader></app-loader>
 <app-header></app-header>
 <div class="container">
-  <div class="row">
+  <!-- <div class="row">
     <div class="col-md-7">
       <app-search></app-search>
     </div>
-    <div class="col-md-5">Counter</div>
-  </div>
+    <div class="col-md-5">
+       <div class="row">
+         <div class="col-xs-12 text-right counter" *ngIf="counter">
+          {{counter}} People
+         </div>
+       </div>
+    </div>
+  </div> -->
   <div class="row top-buffer">
     <div class="col-md-12">
-      <app-contact-list [contacts]="contacts$ | async"></app-contact-list>
+      <app-contact-list></app-contact-list>
     </div>
   </div>
 </div>
