--- a/src/app/contact-dialog/contact-dialog.component.html
+++ b/src/app/contact-dialog/contact-dialog.component.html
@@ -1,1 +1,67 @@
-<p>contact-dialog works!</p>
+<button class="close" mat-button (click)="onClose()">x</button>
+<div class="row">
+  <div class="col-xs-12">
+    <h4>{{header}}</h4>
+    <hr/>
+    <form [formGroup]="contactForm" (ngSubmit)="onSubmit()">
+      <input type="hidden" formControlName="id" id="id" class="form-control">
+      <h5>Profile</h5>
+      <hr>
+      <div class="row">
+        <div class="col-xs-6">
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" formControlName="name" id="name" class="form-control">
+          </div>
+        </div>
+        <div class="col-xs-6">
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" formControlName="email" id="email" class="form-control">
+          </div>
+        </div>
+      </div>
+      <div formGroupName="address">
+        <h5>Address</h5>
+        <hr>
+        <div class="row">
+          <div class="col-xs-8">
+            <div class="form-group">
+              <label for="street">Street</label>
+              <input type="street" formControlName="street" id="street" class="form-control">
+            </div>
+          </div>
+          <div class="col-xs-4">
+            <div class="form-group">
+              <label for="suite">Suite</label>
+              <input type="suite" formControlName="suite" id="suite" class="form-control">
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-8">
+            <div class="form-group">
+              <label for="city">City</label>
+              <input type="city" formControlName="city" id="city" class="form-control">
+            </div>
+          </div>
+          <div class="col-xs-4">
+            <div class="form-group">
+              <label for="zipcode">Zip Code</label>
+              <input type="zipcode" formControlName="zipcode" id="zipcode" class="form-control">
+            </div>
+          </div>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col-xs-12 text-right">
+          <button type="submit" [disabled]="!contactForm.valid" class="submit-btn" id="modal-action-button">
+            OK
+        </button>
+        </div>
+      </div>
+
+    </form>
+  </div>
+</div>
