--- a/src/app/contact-list/contact-list.component.html
+++ b/src/app/contact-list/contact-list.component.html
@@ -1,48 +1,25 @@
 <div class="row">
+  <div class="col-md-7">
+
+      <input class="form-control" type="text" name="search" [(ngModel)]="searchText" autocomplete="off"class="form-control" type="text" placeholder="Search by name">
+      <a class="search-icon">
+        <i class="fa fa-search"></i>
+      </a>
+
+    </div>
+    <div class="col-md-5">
+      <div class="row">
+        <div class="col-xs-12 text-right counter" *ngIf="counter">
+         {{counter}} People
+        </div>
+      </div>
+   </div>
+ </div>
+
+<div class="row">
   <div class="col-xs-12">
-    <div class="panel-group" id="accordion">
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h4 class="panel-title">
-            <a data-toggle="collapse" href="#collapse1">
-            Collapsible Group 1</a>
-          </h4>
-        </div>
-        <div id="collapse1" data-parent="#accordion" class="panel-collapse collapse in">
-          <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-          commodo consequat.</div>
-        </div>
-      </div>
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h4 class="panel-title">
-            <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
-            Collapsible Group 2</a>
-          </h4>
-        </div>
-        <div id="collapse2" class="panel-collapse collapse">
-          <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-          commodo consequat.</div>
-        </div>
-      </div>
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h4 class="panel-title">
-            <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
-            Collapsible Group 3</a>
-          </h4>
-        </div>
-        <div id="collapse3" class="panel-collapse collapse">
-          <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-          commodo consequat.</div>
-        </div>
-      </div>
-    </div>
-    </div>
+    <ng-container *ngFor="let contact of filteredContacts">
+      <app-contact-item [contact]="contact"></app-contact-item>
+      </ng-container>
   </div>
+</div>
