--- a/src/app/contact-list/contact-list.component.scss
+++ b/src/app/contact-list/contact-list.component.scss
@@ -1,6 +1,46 @@
-.panel > .panel-heading {
-  background-image: none;
-  background-color: white;
-  color: rgba($color: #000000, $alpha: 0.5);
-  font-family: "Montserrat", sans-serif;
+input{
+  border-radius: 0px;
+  padding: 20px;
+  color:rgba(122, 55, 55, 0.3);
 }
+
+.search-icon{
+  position: absolute;
+    top: 50%;
+    right: 25px;
+    margin-top: -10px;
+    color: rgba(0, 0, 0, 0.1);
+}
+input {
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    -webkit-background-clip: padding-box; /* for Safari */
+    background-clip: padding-box; /* for IE9+, Firefox 4+, Opera, Chrome */
+}
+
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  color: grey;
+  opacity: 0.4;
+  font-family: "Roboto", sans-serif;
+}
+::-moz-placeholder { /* Firefox 19+ */
+  color: grey;
+  opacity: 0.4;
+  font-family: "Roboto", sans-serif;
+}
+:-ms-input-placeholder { /* IE 10+ */
+  color: grey;
+  opacity: 0.4;
+  font-family: "Roboto", sans-serif;
+}
+:-moz-placeholder { /* Firefox 18- */
+  color: grey;
+  opacity: 0.4;
+  font-family: "Roboto", sans-serif;
+}
+.counter{
+  font-family: "Montserrat", sans-serif;
+    font-weight: normal;
+    font-size: 24px;
+}
+
+
