--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,19 +1,13 @@
 
-  <div class="row">
-    <div class="col-md-12 blue">
-    </div>
-  </div>
 <nav class="navbar navbar-default">
   <div class="container-fluid">
-<div class="navbar-header">
+    <div class="navbar-header">
       <a class="navbar-brand" href="#">
         <span class="logo-brand"><img src="/assets/img/logo.png"  alt=""></span>
         <span class="logo-text">Team Members</span>
       </a>
-  </div>
-
-    <button class="pull-right">ADD MEMBER</button>
-
+    </div>
+    <button class="pull-right" (click)="onAddMember()">ADD MEMBER</button>
   </div>
 </nav>
 
