--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -2,6 +2,10 @@
   -webkit-box-shadow: 0 8px 6px -6px #999;
     -moz-box-shadow: 0 8px 6px -6px #999;
     box-shadow: 0 8px 6px -6px #999;
+    border-top: 30px solid  #0366d6;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0;
 }
 
 .navbar-default .container-fluid {
@@ -22,6 +26,11 @@
     border: 2px solid #0366d6;
     color: #0366d6;
     font-weight: bold;
+}
+
+.navbar-default button:hover {
+  color: white;
+  background-color: #0366d6;
 }
 .blue{
   background-color: #0366d6;
@@ -61,12 +70,3 @@ align-items: center;
 .logo-brand{
   margin-right: 15px;
 }
-
-// .nav >li >a {
-//   padding-top: 30px;
-//   padding-bottom: 30px;
-// }
-// .navbar-toggle {
-//   padding: 10px;
-//   margin: 25px 15px 25px 0;
-// }
