--- a/src/app/contact-list/contact-item/contact-item.component.scss
+++ b/src/app/contact-list/contact-item/contact-item.component.scss
@@ -1,5 +1,7 @@
+@import '../../../assets/variables.scss';
+
 .collapsible {
-  border:1px solid rgba($color: #000000, $alpha: 0.1);
+  border:1px solid $search-icon-color;
   background-color: #fff;
   color: black;
   cursor: pointer;
@@ -8,7 +10,7 @@
   text-align: left;
   outline: none;
   font-size: 15px;
-  font-family: "Roboto", sans-serif;
+  font-family: $font-Roboto;
   margin-top: 10px;
 }
 
@@ -36,7 +38,7 @@
   overflow: hidden;
   transition: max-height 0.2s ease-out;
   background-color:#fff;
-  border:1px solid rgba($color: #000000, $alpha: 0.1);
+  border:1px solid $search-icon-color;
   border-top: 0;
   img{
     border-radius: 50%;
@@ -56,10 +58,10 @@
     color: grey;
     font-size: 12px;
     opacity: 0.5;
-    font-family: "Roboto", sans-serif;
+    font-family: $font-Roboto;
   }
   .email {
-    color: #0366d6;
+    color: $primary-blue;
     cursor: pointer;
 
   }
@@ -71,7 +73,7 @@
     margin-top: 20px;
   }
   .edit-literal{
-    color: #0366d6;
+    color: $primary-blue;
     cursor: pointer;
     font-size: 12px;
   }
