--- a/src/app/contact-list/contact-list.component.scss
+++ b/src/app/contact-list/contact-list.component.scss
@@ -1,3 +1,5 @@
+@import '../../assets/variables.scss';
+
 input{
   border-radius: 0px;
   padding: 20px;
@@ -6,13 +8,13 @@ input{
 
 .search-icon{
   position: absolute;
-    top: 50%;
-    right: 25px;
-    margin-top: -10px;
-    color: rgba(0, 0, 0, 0.1);
+  top: 50%;
+  right: 25px;
+  margin-top: -10px;
+  color:$search-icon-color;
 }
 input {
-    border: 1px solid rgba(0, 0, 0, 0.1);
+    border: $search-icon-color;
     -webkit-background-clip: padding-box; /* for Safari */
     background-clip: padding-box; /* for IE9+, Firefox 4+, Opera, Chrome */
 }
@@ -20,27 +22,27 @@ input {
 ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
   color: grey;
   opacity: 0.4;
-  font-family: "Roboto", sans-serif;
+  font-family: $font-Roboto;
 }
 ::-moz-placeholder { /* Firefox 19+ */
   color: grey;
   opacity: 0.4;
-  font-family: "Roboto", sans-serif;
+  font-family: $font-Roboto;
 }
 :-ms-input-placeholder { /* IE 10+ */
   color: grey;
   opacity: 0.4;
-  font-family: "Roboto", sans-serif;
+  font-family: $font-Roboto;
 }
 :-moz-placeholder { /* Firefox 18- */
   color: grey;
   opacity: 0.4;
-  font-family: "Roboto", sans-serif;
+  font-family: $font-Roboto;
 }
 .counter{
-  font-family: "Montserrat", sans-serif;
+  font-family: $font-Montserrat;
     font-weight: normal;
-    font-size: 24px;
+    font-size: $large-font-size;
 }
 
 
