--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -1,7 +1,8 @@
+@import '../../assets/variables.scss';
 input{
   border-radius: 0px;
   padding: 20px;
-  color:rgba(122, 55, 55, 0.3);
+  color:$input-color;
 }
 
 .search-icon{
@@ -9,10 +10,10 @@ input{
     top: 50%;
     right: 25px;
     margin-top: -10px;
-    color: rgba(0, 0, 0, 0.1);
+    color: $search-icon-color;
 }
 input {
-    border: 1px solid rgba(0, 0, 0, 0.1);
+    border: 1px solid $search-icon-color;
     -webkit-background-clip: padding-box; /* for Safari */
     background-clip: padding-box; /* for IE9+, Firefox 4+, Opera, Chrome */
 }
@@ -20,22 +21,22 @@ input {
 ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
   color: grey;
   opacity: 0.4;
-  font-family: "Roboto", sans-serif;
+  font-family: $font-Roboto;
 }
 ::-moz-placeholder { /* Firefox 19+ */
   color: grey;
   opacity: 0.4;
-  font-family: "Roboto", sans-serif;
+  font-family: $font-Roboto;
 }
 :-ms-input-placeholder { /* IE 10+ */
   color: grey;
   opacity: 0.4;
-  font-family: "Roboto", sans-serif;
+  font-family: $font-Roboto;
 }
 :-moz-placeholder { /* Firefox 18- */
   color: grey;
   opacity: 0.4;
-  font-family: "Roboto", sans-serif;
+  font-family: $font-Roboto;
 }
 
 
